feat: modernize orders page with charts and new UI

--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -28,7 +28,7 @@
                 <a href="/dashboard" class="nav-link">Dashboard</a>
                 <a href="/orders" class="nav-link active">Orders</a>
                 <a href="/groups" class="nav-link">Groups</a>
-                <a href="/businesses" class="nav-link">Businesses</a>
+                <a href="/business" class="nav-link">Businesses</a>
 
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
                     <i class="fas fa-sun"></i>
